# resources/views/email/forgetPassword.blade.php
@@ -1,0 +1,18 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+<div>
+    hello data
+    <a href="{{env('FRONT_APP_URL').'/reset-password?'.$token}}">Reset Password</a>
+    {{$token}}
+</div>
+
+</body>
+</html>
